--- a/packages/api/pyproject.toml
+++ b/packages/api/pyproject.toml
@@ -6,4 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.124.4",
+    "uvicorn>=0.40.0",
+    "vtracer>=0.6.11",
+    "rembg>=2.0.50",
+    "pillow>=10.0.0",
 ]
