--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "vite",
         "kill": "fuser -k 5000/tcp",
-        "build": "tsc -b --noCheck && vite build",
+        "build": "vite build",
         "lint": "eslint .",
         "optimize": "vite optimize",
         "preview": "vite preview",
@@ -85,12 +85,14 @@
         "@eslint/js": "^9.21.0",
         "@playwright/test": "^1.57.0",
         "@tailwindcss/postcss": "^4.1.8",
+        "@testing-library/dom": "^10.4.1",
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.5.2",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react-swc": "^4.2.2",
+        "@vitest/coverage-v8": "^2.1.8",
         "@vitest/ui": "^2.1.8",
         "eslint": "^9.28.0",
         "eslint-plugin-react-hooks": "^5.2.0",
@@ -103,7 +105,6 @@
         "vite": "^6.4.1",
         "vite-plugin-svgr": "^4.5.0",
         "vitest": "^2.1.8",
-        "@vitest/coverage-v8": "^2.1.8",
         "wrangler": "^4.54.0"
     },
     "workspaces": {
