--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -82,7 +82,6 @@
         "zod": "^3.25.76"
     },
     "devDependencies": {
-        "@cloudflare/workers-types": "^4.20251213.0",
         "@eslint/js": "^9.21.0",
         "@playwright/test": "^1.57.0",
         "@tailwindcss/postcss": "^4.1.8",
@@ -104,8 +103,7 @@
         "vite": "^6.4.1",
         "vite-plugin-svgr": "^4.5.0",
         "vitest": "^2.1.8",
-        "@vitest/coverage-v8": "^2.1.8",
-        "wrangler": "^4.54.0"
+        "@vitest/coverage-v8": "^2.1.8"
     },
     "workspaces": {
         "packages": [
