--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -12,9 +12,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "strictNullChecks": true,
-    "types": [
-      "@cloudflare/workers-types"
-    ],
+    "types": [],
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -32,7 +30,6 @@
     }
   },
   "include": [
-    "src",
-    "worker.ts"
+    "src"
   ]
 }
