--- a/k8s/overlays/staging/kustomization.yaml
+++ b/k8s/overlays/staging/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
 namePrefix: staging-
 images:
 - name: lornu-ai
-  newName: <AWS_ECR_REGISTRY>
-  newTag: ${{ github.sha }}
+  newName: placeholder-registry/lornu-ai
+  newTag: latest
 patches:
 - path: deployment-patch.yaml
