--- a/packages/api/pyproject.toml
+++ b/packages/api/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.124.4",
+    "uvicorn>=0.32.0",
+    "pydantic[email]>=2.12.0",
 ]
