fix: address all code review feedback
- Narrow workflow path triggers to substantive files only
- Fix ECR security: immutable tags, no force delete, add encryption and lifecycle policy
- Fix FastAPI security: path traversal protection, route ordering, add /api/contact endpoint
- Add configurability: UVICORN_RELOAD env var, optional environment field in health
- Fix Dockerfile: pin uv version with digest, correct lockfile name
- Add missing dependencies: pydantic with email support
- Improve logging and error handling throughout

--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -4,8 +4,14 @@ on:
   pull_request:
     paths:
       - "terraform/aws/staging/**"
-      - "apps/web/**"
-      - "packages/api/**"
+      - "apps/web/src/**"
+      - "apps/web/package.json"
+      - "apps/web/bun.lock"
+      - "apps/web/vite.config.*"
+      - "apps/web/tsconfig.json"
+      - "packages/api/main.py"
+      - "packages/api/pyproject.toml"
+      - "packages/api/uv.lock"
       - "Dockerfile"
   workflow_dispatch:
 
