--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -5,8 +5,8 @@ resources:
 namePrefix: dev-
 images:
 - name: lornu-ai
-  newName: localhost:5000/lornu-ai
-  newTag: dev
+  newName: lornu-ai
+  newTag: local
 patches:
 - path: deployment-patch.yaml
 - path: configmap-patch.yaml
