--- a/k8s/base/configmap.yaml
+++ b/k8s/base/configmap.yaml
@@ -2,9 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: lornu-ai-config
-  labels:
-    app: lornu-ai
 data:
-  # Base configuration - environment-agnostic
-  LOG_LEVEL: "info"
-  ENVIRONMENT: "production"
+  environment: "base"
+  contact-email: ""
