--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -2,35 +2,55 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: lornu-ai
-  labels:
-    app: lornu-ai
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: lornu-ai
+      app.kubernetes.io/name: lornu-ai
   template:
     metadata:
       labels:
-        app: lornu-ai
+        app.kubernetes.io/name: lornu-ai
     spec:
+      serviceAccountName: lornu-ai
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        fsGroup: 1000
       containers:
       - name: lornu-ai
         image: lornu-ai:latest
+        imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 8080
-          name: http
+        - name: http
+          containerPort: 8080
           protocol: TCP
         env:
         - name: PORT
           value: "8080"
-        - name: HOST
-          value: "0.0.0.0"
-        - name: PYTHONPATH
-          value: "/app"
-        envFrom:
-        - configMapRef:
-            name: lornu-ai-config
+        - name: ENVIRONMENT
+          valueFrom:
+            configMapKeyRef:
+              name: lornu-ai-config
+              key: environment
+        - name: RESEND_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: lornu-ai-secrets
+              key: resend-api-key
+              optional: true
+        - name: CONTACT_EMAIL
+          valueFrom:
+            configMapKeyRef:
+              name: lornu-ai-config
+              key: contact-email
+              optional: true
+        - name: RATE_LIMIT_BYPASS_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: lornu-ai-secrets
+              key: rate-limit-bypass-secret
+              optional: true
         resources:
           requests:
             memory: "256Mi"
@@ -38,15 +58,31 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "500m"
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8080
-          initialDelaySeconds: 30
-          periodSeconds: 10
+        securityContext:
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop:
+            - ALL
         readinessProbe:
           httpGet:
-            path: /health
-            port: 8080
+            path: /api/health
+            port: http
           initialDelaySeconds: 5
-          periodSeconds: 5
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        livenessProbe:
+          httpGet:
+            path: /api/health
+            port: http
+          initialDelaySeconds: 15
+          periodSeconds: 20
+          timeoutSeconds: 5
+          failureThreshold: 3
+        volumeMounts:
+        - name: tmp
+          mountPath: /tmp
+      volumes:
+      - name: tmp
+        emptyDir: {}
