--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -34,6 +34,8 @@ jobs:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: "Terraform Init"
+        env:
+          TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORG }}
         run: terraform -chdir=terraform/aws/staging init
 
       - name: "Terraform Plan"
@@ -67,6 +69,8 @@ jobs:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: "Terraform Init"
+        env:
+          TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORG }}
         run: terraform -chdir=terraform/aws/staging init
 
       - name: "Terraform Apply"
