--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -1,18 +1,7 @@
 name: "Terraform AWS"
 
 on:
-  pull_request:
-    paths:
-      - "terraform/aws/staging/**"
-      - "apps/web/src/**"
-      - "apps/web/package.json"
-      - "apps/web/bun.lock"
-      - "apps/web/vite.config.*"
-      - "apps/web/tsconfig.json"
-      - "packages/api/main.py"
-      - "packages/api/pyproject.toml"
-      - "packages/api/uv.lock"
-      - "Dockerfile"
+  # Temporarily disabled auto-triggers; manual dispatch only
   workflow_dispatch:
 
 permissions:
@@ -29,6 +18,8 @@ jobs:
   build:
     name: "Build and Push Docker Image"
     runs-on: ubuntu-latest
+    # Skip AWS steps on forked pull requests where secrets/role aren't available
+    if: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository }}
     outputs:
       image-uri: ${{ steps.build-image.outputs.image-uri }}
     
@@ -36,11 +27,28 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
 
+      - name: "Debug OIDC claims (safe)"
+        if: ${{ always() }}
+        run: |
+          set -euo pipefail
+          if [[ -z "${ACTIONS_ID_TOKEN_REQUEST_URL:-}" || -z "${ACTIONS_ID_TOKEN_REQUEST_TOKEN:-}" ]]; then
+            echo "OIDC environment variables are not available in this context."; exit 0
+          fi
+          echo "Inspecting OIDC claims for audience sts.amazonaws.com"
+          RESP=$(curl -sS -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=sts.amazonaws.com")
+          TOKEN=$(echo "$RESP" | jq -r '.value')
+          if [ -z "$TOKEN" ] || [ "$TOKEN" = "null" ]; then
+            echo "No OIDC token available in this context."; exit 0
+          fi
+          CLAIMS=$(echo "$TOKEN" | awk -F. '{print $2}' | base64 -d 2>/dev/null || true)
+          echo "$CLAIMS" | jq '{iss, aud, sub, repository, ref, job_workflow_ref}' || true
+
       - name: "Configure AWS Credentials"
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ACTIONS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
+          audience: sts.amazonaws.com
 
       - name: "Login to Amazon ECR"
         id: login-ecr
@@ -69,6 +77,8 @@ jobs:
     name: "Terraform Plan"
     runs-on: ubuntu-latest
     needs: build
+    # Skip AWS steps on forked pull requests where secrets/role aren't available
+    if: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository }}
 
     steps:
       - name: "Checkout"
@@ -84,7 +94,7 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.8.0
-          terraform_api_token: ${{ secrets.TERRAFORM_API_TOKEN }}
+          cli_config_credentials_token: ${{ secrets.TERRAFORM_API_TOKEN }}
 
       - name: "Terraform Init"
         run: terraform -chdir=terraform/aws/staging init
@@ -100,7 +110,6 @@ jobs:
         uses: aquasecurity/tfsec-action@v1.0.0
         with:
           working_directory: terraform/aws/staging
-          github_token: ${{ secrets.GITHUB_TOKEN }}
 
   apply:
     name: "Terraform Apply & Deploy"
@@ -122,7 +131,7 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.8.0
-          terraform_api_token: ${{ secrets.TERRAFORM_API_TOKEN }}
+          cli_config_credentials_token: ${{ secrets.TERRAFORM_API_TOKEN }}
 
       - name: "Terraform Init"
         run: terraform -chdir=terraform/aws/staging init
