fix: map github secrets to terraform variables and document them

--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORG }}
+      TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
 
     steps:
       - name: "Checkout"
@@ -51,6 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORG }}
+      TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
     if: github.event_name == 'workflow_dispatch'
 
     steps:
@@ -75,3 +77,76 @@ jobs:
 
       - name: "Terraform Apply"
         run: terraform -chdir=terraform/aws/staging apply -auto-approve
+
+  prod-plan:
+    name: "Production Plan"
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    env:
+      TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORG }}
+      TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
+      TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
+      TF_VAR_db_username: ${{ secrets.PROD_DB_USERNAME }}
+      TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
+
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: "Configure AWS Credentials"
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: "Setup Terraform"
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.8.0
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+      - name: "Terraform Init"
+        run: terraform -chdir=terraform/aws/production init
+
+      - name: "Terraform Plan"
+        run: terraform -chdir=terraform/aws/production plan
+
+      - name: "Terraform Security Scan"
+        uses: aquasecurity/tfsec-action@v1.0.0
+        with:
+          working_directory: terraform/aws/production
+
+  prod-apply:
+    name: "Production Apply"
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    env:
+      TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORG }}
+      TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
+      TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
+      TF_VAR_db_username: ${{ secrets.PROD_DB_USERNAME }}
+      TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
+
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: "Configure AWS Credentials"
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: "Setup Terraform"
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.8.0
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+      - name: "Terraform Init"
+        run: terraform -chdir=terraform/aws/production init
+
+      - name: "Terraform Apply"
+        run: terraform -chdir=terraform/aws/production apply -auto-approve
