--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -1,7 +1,18 @@
 name: "Terraform AWS"
 
 on:
-  # Temporarily disabled auto-triggers; manual dispatch only
+  pull_request:
+    paths:
+      - "terraform/aws/staging/**"
+      - "apps/web/src/**"
+      - "apps/web/package.json"
+      - "apps/web/bun.lock"
+      - "apps/web/vite.config.*"
+      - "apps/web/tsconfig.json"
+      - "packages/api/main.py"
+      - "packages/api/pyproject.toml"
+      - "packages/api/uv.lock"
+      - "Dockerfile"
   workflow_dispatch:
 
 permissions:
@@ -27,21 +38,6 @@ jobs:
       - name: "Checkout"
         uses: actions/checkout@v4
 
-      - name: "Debug OIDC claims (safe)"
-        if: ${{ always() }}
-        run: |
-          set -euo pipefail
-          if [[ -z "${ACTIONS_ID_TOKEN_REQUEST_URL:-}" || -z "${ACTIONS_ID_TOKEN_REQUEST_TOKEN:-}" ]]; then
-            echo "OIDC environment variables are not available in this context."; exit 0
-          fi
-          echo "Inspecting OIDC claims for audience sts.amazonaws.com"
-          RESP=$(curl -sS -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=sts.amazonaws.com")
-          TOKEN=$(echo "$RESP" | jq -r '.value')
-          if [ -z "$TOKEN" ] || [ "$TOKEN" = "null" ]; then
-            echo "No OIDC token available in this context."; exit 0
-          fi
-          CLAIMS=$(echo "$TOKEN" | awk -F. '{print $2}' | base64 -d 2>/dev/null || true)
-          echo "$CLAIMS" | jq '{iss, aud, sub, repository, ref, job_workflow_ref}' || true
 
       - name: "Configure AWS Credentials"
         uses: aws-actions/configure-aws-credentials@v4
