--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -2,22 +2,79 @@ name: "Terraform AWS"
 
 on:
   pull_request:
-    branches: [ develop ]
     paths:
       - "terraform/aws/staging/**"
+      - "apps/web/src/**"
+      - "apps/web/package.json"
+      - "apps/web/bun.lock"
+      - "apps/web/vite.config.*"
+      - "apps/web/tsconfig.json"
+      - "packages/api/main.py"
+      - "packages/api/pyproject.toml"
+      - "packages/api/uv.lock"
+      - "Dockerfile"
   workflow_dispatch:
 
 permissions:
   id-token: write
   contents: read
 
+env:
+  TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORG }}
+  TF_WORKSPACE: ${{ secrets.TF_CLOUD_WORKSPACE }}
+  AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+  ECR_REPOSITORY: "lornu-ai-staging"
+
 jobs:
+  build:
+    name: "Build and Push Docker Image"
+    runs-on: ubuntu-latest
+    # Skip AWS steps on forked pull requests where secrets/role aren't available
+    if: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository }}
+    outputs:
+      image-uri: ${{ steps.build-image.outputs.image-uri }}
+    
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+
+      - name: "Configure AWS Credentials"
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ACTIONS_ROLE_ARN }}
+          aws-region: ${{ env.AWS_REGION }}
+          audience: sts.amazonaws.com
+
+      - name: "Login to Amazon ECR"
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: "Set up Docker Buildx"
+        uses: docker/setup-buildx-action@v3
+
+      - name: "Build, Tag, and Push Docker Image"
+        id: build-image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker buildx build \
+            --platform linux/amd64 \
+            --cache-from type=registry,ref=$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:cache \
+            --cache-to type=registry,ref=$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:cache,mode=max \
+            --tag $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG \
+            --tag $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:latest \
+            --push \
+            .
+          echo "image-uri=$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
   plan:
     name: "Terraform Plan"
     runs-on: ubuntu-latest
-    env:
-      TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORG }}
-      TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
+    needs: build
+    # Skip AWS steps on forked pull requests where secrets/role aren't available
+    if: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository }}
 
     steps:
       - name: "Checkout"
@@ -26,20 +83,23 @@ jobs:
       - name: "Configure AWS Credentials"
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          role-to-assume: ${{ secrets.AWS_ACTIONS_ROLE_ARN }}
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: "Setup Terraform"
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.8.0
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+          cli_config_credentials_token: ${{ secrets.TERRAFORM_API_TOKEN }}
 
       - name: "Terraform Init"
         run: terraform -chdir=terraform/aws/staging init
 
       - name: "Terraform Plan"
+        env:
+          TF_VAR_acm_certificate_arn: ${{ secrets.ACM_CERTIFICATE_ARN }}
+          TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
+          TF_VAR_docker_image: ${{ needs.build.outputs.image-uri }}
         run: terraform -chdir=terraform/aws/staging plan
 
       - name: "Terraform Security Scan"
@@ -48,11 +108,9 @@ jobs:
           working_directory: terraform/aws/staging
 
   apply:
-    name: "Terraform Apply"
+    name: "Terraform Apply & Deploy"
     runs-on: ubuntu-latest
-    env:
-      TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORG }}
-      TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
+    needs: build
     if: github.event_name == 'workflow_dispatch'
 
     steps:
@@ -62,91 +120,38 @@ jobs:
       - name: "Configure AWS Credentials"
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          role-to-assume: ${{ secrets.AWS_ACTIONS_ROLE_ARN }}
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: "Setup Terraform"
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.8.0
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+          cli_config_credentials_token: ${{ secrets.TERRAFORM_API_TOKEN }}
 
       - name: "Terraform Init"
         run: terraform -chdir=terraform/aws/staging init
 
       - name: "Terraform Apply"
+        env:
+          TF_VAR_acm_certificate_arn: ${{ secrets.ACM_CERTIFICATE_ARN }}
+          TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
         run: terraform -chdir=terraform/aws/staging apply -auto-approve
 
-  prod-plan:
-    name: "Production Plan"
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    env:
-      TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORG }}
-      TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
-      TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
-      TF_VAR_db_username: ${{ secrets.PROD_DB_USERNAME }}
-      TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
+      - name: "Update kubeconfig"
+        run: |
+          aws eks update-kubeconfig \
+            --name lornu-ai-staging \
+            --region ${{ env.AWS_REGION }}
 
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@v4
+      - name: "Deploy to EKS with Kustomize"
+        run: |
+          kustomize build k8s/overlays/staging | \
+          kubectl set image deployment/staging-lornu-ai \
+            lornu-ai=${{ needs.build.outputs.image-uri }} \
+            --filename - | \
+          kubectl apply -f -
 
-      - name: "Configure AWS Credentials"
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: "Setup Terraform"
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.8.0
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-      - name: "Terraform Init"
-        run: terraform -chdir=terraform/aws/production init
-
-      - name: "Terraform Plan"
-        run: terraform -chdir=terraform/aws/production plan
-
-      - name: "Terraform Security Scan"
-        uses: aquasecurity/tfsec-action@v1.0.0
-        with:
-          working_directory: terraform/aws/production
-
-  prod-apply:
-    name: "Production Apply"
-    runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch'
-    env:
-      TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORG }}
-      TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
-      TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
-      TF_VAR_db_username: ${{ secrets.PROD_DB_USERNAME }}
-      TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
-
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@v4
-
-      - name: "Configure AWS Credentials"
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: "Setup Terraform"
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.8.0
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-      - name: "Terraform Init"
-        run: terraform -chdir=terraform/aws/production init
-
-      - name: "Terraform Apply"
-        run: terraform -chdir=terraform/aws/production apply -auto-approve
+      - name: "Wait for Deployment"
+        run: |
+          kubectl rollout status deployment/staging-lornu-ai -n default --timeout=5m
