--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -127,7 +127,7 @@ jobs:
     name: "Terraform Apply & Deploy"
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'workflow_dispatch'
+    if: false  # DISABLED FOR SAFETY - staging deployment temporarily disabled
 
     steps:
       - name: "Checkout"
