fix: address infra review notes

--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -19,7 +19,7 @@ configMapGenerator:
     behavior: merge
     literals:
       - LOG_LEVEL=warn
-      - ENVIRONMENT=production
+      - environment=production
       - DEBUG=false
 
 # Patch for production-specific settings
