fix: address critical code review issues
CRITICAL FIXES:
- Restore security contexts (runAsNonRoot, readOnlyRootFilesystem, drop ALL caps)
- Fix health probe paths from /health to / (FastAPI root)
- Add secrets back via secretRef
- Set safe ENVIRONMENT default to 'development'
- Add serviceaccount.yaml back to kustomization
- Use named port 'http' in probes for maintainability

--- a/k8s/base/configmap.yaml
+++ b/k8s/base/configmap.yaml
@@ -5,6 +5,6 @@ metadata:
   labels:
     app: lornu-ai
 data:
-  # Base configuration - environment-agnostic
+  # Base configuration - environment-agnostic defaults
   LOG_LEVEL: "info"
-  ENVIRONMENT: "production"
+  ENVIRONMENT: "development"  # Safe default; production overlay will override
