--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -2,14 +2,16 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - serviceaccount.yaml
+  - configmap.yaml
   - deployment.yaml
   - service.yaml
-  - configmap.yaml
 
 labels:
   - pairs:
       app.kubernetes.io/name: lornu-ai
       app.kubernetes.io/part-of: lornu-ai
+    includeSelectors: true
 
 namePrefix: ""
 namespace: default
