fix: correct terraform/aws/production paths in CI workflows and disable staging deploy

--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -125,7 +125,8 @@ jobs:
     name: "Terraform Apply & Deploy"
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'workflow_dispatch'
+    # Temporarily disabling staging deployment for safety
+    if: false
 
     steps:
       - name: "Checkout"
