--- a/.github/workflows/terraform-aws-prod.yml
+++ b/.github/workflows/terraform-aws-prod.yml
@@ -56,26 +56,24 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.8.0
-          cli_config_credentials_token: ${{ secrets.TERRAFORM_API_TOKEN }}
+          terraform_api_token: ${{ secrets.TERRAFORM_API_TOKEN }}
 
       - name: Terraform Init
         run: terraform -chdir=terraform/aws/production init
 
       - name: Terraform Plan
         env:
-          TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
+          TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN_PROD }}
           TF_VAR_docker_image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
-          TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
-          TF_VAR_db_username: ${{ secrets.PROD_DB_USERNAME }}
-          TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
-          TF_VAR_resource_prefix: ${{ secrets.PROD_RESOURCE_PREFIX }}
-          TF_VAR_github_repo: ${{ secrets.PROD_GITHUB_REPO }}
+          TF_VAR_git_sha: ${{ github.sha }}
+          TF_VAR_domain: ${{ secrets.PROD_DOMAIN }}
         run: terraform -chdir=terraform/aws/production plan
 
       - name: Terraform Security Scan
         uses: aquasecurity/tfsec-action@v1.0.0
         with:
           working_directory: terraform/aws/production
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
   apply:
     name: Terraform Apply
@@ -99,18 +97,15 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.8.0
-          cli_config_credentials_token: ${{ secrets.TERRAFORM_API_TOKEN }}
+          terraform_api_token: ${{ secrets.TERRAFORM_API_TOKEN }}
 
       - name: Terraform Init
         run: terraform -chdir=terraform/aws/production init
 
       - name: Terraform Apply
         env:
-          TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN }}
+          TF_VAR_secrets_manager_arn_pattern: ${{ secrets.SECRETS_MANAGER_ARN_PATTERN_PROD }}
           TF_VAR_docker_image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
-          TF_VAR_domain_name: ${{ secrets.PROD_DOMAIN }}
-          TF_VAR_db_username: ${{ secrets.PROD_DB_USERNAME }}
-          TF_VAR_db_password: ${{ secrets.PROD_DB_PASSWORD }}
-          TF_VAR_resource_prefix: ${{ secrets.PROD_RESOURCE_PREFIX }}
-          TF_VAR_github_repo: ${{ secrets.PROD_GITHUB_REPO }}
+          TF_VAR_git_sha: ${{ github.sha }}
+          TF_VAR_domain: ${{ secrets.PROD_DOMAIN }}
         run: terraform -chdir=terraform/aws/production apply -auto-approve
