chore: align TF cloud secret name

--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -21,7 +21,7 @@ permissions:
   contents: read
 
 env:
-  TF_CLOUD_ORGANIZATION: ${{ secrets.TF_CLOUD_ORG }}
+  TF_CLOUD_ORG: ${{ secrets.TF_CLOUD_ORG }}
   TF_WORKSPACE: ${{ secrets.TF_CLOUD_WORKSPACE }}
   AWS_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
   ECR_REPOSITORY: "lornu-ai-staging"
