chore: remove Cloudflare artifacts to make repo AWS/GCP native (Issue #140)
BREAKING CHANGE: Cloudflare Workers code removed from main repo

- Remove apps/web/worker.ts (Cloudflare Worker implementation)
- Remove duplicate backup files (worker 2.ts, wrangler 2.toml, etc.)
- Add Cloudflare-specific patterns to .gitignore
- Add docs/CLOUDFLARE_WORKERS.md pointing to dev fork

Cloudflare Workers development now happens in lornu-ai-dev fork.
Main repo is now 100% AWS/GCP native as per EPIC_ARCH_SPLIT.md.

Closes #140

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,9 @@ logs
 *.njsproj
 *.sln
 *.sw?
+
+# Cloudflare Workers (use lornu-ai-dev fork for Cloudflare development)
+wrangler.toml
+apps/web/worker.ts
+.wrangler/
+.dev.vars
